# Fast-API-LMS

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  commands.md  lms-postman.json  main.py  pyproject.toml
API/: courses.py  sections.py  users.py
API/utils/: courses.py  users.py
DB/: db_setup.py
DB/Models/: course.py  mixins.py  user.py
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 3a5445bd49ba_.py  5ff95515f8bf_moving_is_active_to_users_table.py
pydantic_schemas/: course.py  user.py
