[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = "Fast API Crash Course"
authors = ["Srikar V <srikarvuchiha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
