[tool.poetry]
name = "fast-api-lms"
version = "0.1.0"
description = "Fast API Crash Course"
authors = ["Srikar V <srikarvuchiha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
pydantic = "^2.7.1"
sqlalchemy = "^2.0.29"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
alembic = "^1.13.1"
alembic-postgresql-enum = "^1.2.0"
fastapi2postman = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
